--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "bookstore-crud",
+  "name": "digital-store-pathsala",
   "version": "1.0.0",
-  "description": "Simple bookstore crud application",
+  "description": "Simple e-store",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "author": "pray3m",
+  "author": "Sagar",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
