--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "build": "echo \"No build step required\""
+
   },
   "author": "Sagar",
   "license": "ISC",
