--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "digital-store-pathsala",
   "version": "1.0.0",
   "description": "Simple e-store",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "build": "npm run build"
+    "start": "node index.js",
+    "build": "echo \"No build step required\""
 
   },
   "author": "Sagar",
